Implement MCP tools integration and fix critical system issues

--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,9 @@ REDIS_URL="redis://localhost:6379"
 # Vector Database Configuration
 VECTOR_DB_PATH="./data/vector_store"
 
-# LLM Configuration - Google Gemini
+# LLM Configuration - Google Gemini 2.5 Flash
 GOOGLE_API_KEY="AIzaSyCrEfICW4RYyJW45Uy0ZSduXVKUKjNu25I"
-LLM_MODEL="gemini-2.0-flash-exp"
+LLM_MODEL="gemini-2.5-flash"
 LLM_PROVIDER="google"
 
 # MCP Server Configuration
